--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <meta name="author" content="Dmitry Kolomiets">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/css/media-queries.css">
-    <link rel="stylesheet" href="/css/slick.css">
-    <link rel="stylesheet" href="/css/slick-theme.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
 </head>
+
 <body>
     <!-- header -->
     <header class="header">
@@ -66,7 +67,7 @@
                 <li class="less-row-list-item"><a class="less-row-list-item-link" href="#"><i
                             class="fab fa-pinterest"></i></a></li>
                 <li class="less-row-list-item"><a class="less-row-list-item-link" href="#"><i
-                            class="fab fa-youtube"></i></a></li>     
+                            class="fab fa-youtube"></i></a></li>
                 <li class="less-row-list-item"><a class="less-row-list-item-link" href="#"><i
                             class="fab fa-facebook-square"></i></a></li>
                 <li class="less-row-list-item"><a class="less-row-list-item-link" href="#"><i
@@ -85,12 +86,19 @@
                 </div>
 
                 <div class="menu__links">
-                    <a class="menu__links-item">Item 1</a>
-                    <a class="menu__links-item">Item 2</a>
+                    <a class="menu__links-item" href="#">photography</a>
+                    <a class="menu__links-item" href="#">videography</a>
+                    <a class="menu__links-item" href="#">reviews</a>
+                    <a class="menu__links-item" href="#">our services</a>
+                    <a class="menu__links-item" href="#">info</a>
+                    <a class="menu__links-item" href="#">contacts</a>
                 </div>
             </div>
         </div>
-        <p class="less-description__p text-center">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Erat nam at ectus urna duis.  Massa sed elementum tempus egestas sed sed risus pretium quam. Aliquam sem et tortor consequat.  Quis imperdiet massa tincidunt nunc pulvinar sapien et. Tempor nec feugiat nisl pretium fusce id. 
+        <p class="less-description__p text-center">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et dolore magna aliqua. Erat nam at ectus urna duis. Massa sed elementum tempus egestas sed sed risus
+            pretium quam. Aliquam sem et tortor consequat. Quis imperdiet massa tincidunt nunc pulvinar sapien et.
+            Tempor nec feugiat nisl pretium fusce id.
         </p>
     </div>
     <!-- portfolio -->
@@ -266,7 +274,7 @@
                             ut
                             labore et dolore magna aliqua. Erat nam at lectus urna duis.</p>
                         <a href="#" class="comment-block__read-more">Learn more <img class="comment-block__img"
-                                src="/images/arrow-right.png" alt="arrow-right"></a>
+                                src="images/arrow-right.png" alt="arrow-right"></a>
                     </div>
                 </div>
             </div>
